[gd_scene load_steps=11 format=3 uid="uid://nqy2u8std0q0"]

[ext_resource type="Script" path="res://scripts/level5.gd" id="1_irigr"]
[ext_resource type="PackedScene" uid="uid://cemdwkvhdvk65" path="res://ui/hud.tscn" id="2_n45jj"]
[ext_resource type="PackedScene" uid="uid://d4gg23em8gp4w" path="res://ui/gameOverScreen.tscn" id="3_pf3ia"]
[ext_resource type="PackedScene" uid="uid://5gb0a30g8h6d" path="res://ui/levelTransition.tscn" id="4_sd50p"]
[ext_resource type="PackedScene" uid="uid://dnhtoatfm73uq" path="res://entities/player/player.tscn" id="5_nbg2h"]
[ext_resource type="AudioStream" uid="uid://osm6b5u6p0ip" path="res://assets/audio/level5bgMusic.mp3" id="6_0m2hh"]
[ext_resource type="AudioStream" uid="uid://fh5v5va1sxwn" path="res://assets/audio/laserBlast.mp3" id="7_dyh30"]
[ext_resource type="PackedScene" uid="uid://kx5rjn3v8tc0" path="res://entities/effects/starField.tscn" id="8_t4rd4"]
[ext_resource type="PackedScene" uid="uid://chh2xbmput5oy" path="res://entities/mobs/bossMob.tscn" id="9_bdwup"]

[sub_resource type="Curve2D" id="Curve2D_nfals"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -283.863, -211.543, 0, 0, 0, 0, 909.575, -211.543, 0, 0, 0, 0, 909.575, 469.513, 0, 0, 0, 0, -275.576, 469.513, 0, 0, 0, 0, -283.863, -203.03)
}
point_count = 5

[node name="Level5" type="Node"]
script = ExtResource("1_irigr")
growth_limit = 6
mob_limit = 4
level = 5
mob_types_allowed = 3

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_n45jj")]

[node name="GameOverScreen" parent="UI" instance=ExtResource("3_pf3ia")]

[node name="LevelTransition" parent="UI" instance=ExtResource("4_sd50p")]

[node name="Player" parent="." instance=ExtResource("5_nbg2h")]
position = Vector2(574, 384)

[node name="Lasers" type="Node" parent="."]

[node name="Mobs" type="Node" parent="."]

[node name="MobPath" type="Path2D" parent="."]
position = Vector2(274.007, 198.79)
scale = Vector2(0.965278, 0.939717)
curve = SubResource("Curve2D_nfals")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-283.863, -211.543)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="BackGroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0m2hh")
autoplay = true

[node name="LaserSoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_dyh30")
volume_db = -10.0

[node name="StarField" parent="." instance=ExtResource("8_t4rd4")]

[node name="BossMob" parent="." instance=ExtResource("9_bdwup")]
position = Vector2(577, 129)

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
